Arreglando la vista del CSS

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100&display=swap"
             rel="stylesheet">
-        <link rel="stylesheet" href="/CSS/reset.css">
-        <link rel="stylesheet" href="/CSS/banner.css">
-        <link rel="stylesheet" href="/font.css">
-        <link rel="stylesheet" href="/CSS/redes.css">
-        <link rel="stylesheet" href="/CSS/story.css">
-        <link rel="stylesheet" href="/CSS/anclas.css">
-        <link rel="stylesheet" href="/CSS/skills.css">
-        <link rel="stylesheet" href="/CSS/languagues.css">
-        <link rel="stylesheet" href="/CSS/footer.css">
+        <link rel="stylesheet" href="CSS/reset.css">
+        <link rel="stylesheet" href="CSS/banner.css">
+        <link rel="stylesheet" href="font.css">
+        <link rel="stylesheet" href="CSS/redes.css">
+        <link rel="stylesheet" href="CSS/story.css">
+        <link rel="stylesheet" href="CSS/anclas.css">
+        <link rel="stylesheet" href="CSS/skills.css">
+        <link rel="stylesheet" href="CSS/languagues.css">
+        <link rel="stylesheet" href="CSS/footer.css">
         <title>Bug the code</title>
     </head>
     <body>
