--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="/CSS/style.css">
+        <link rel="stylesheet" href="CSS/style.css">
         <link
             href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,700;1,100&display=swap"
             rel="stylesheet">
@@ -22,7 +22,7 @@
     <body>
 
         <header class="cabecera">
-            <img class="logo" src="/IMG/logo.jpg" alt="logo"
+            <img class="logo" src="IMG/logo.jpg" alt="logo"
                 width="50px" height="50px">
             <nav class="menu">
                 <ul class="menu__lista">
@@ -169,7 +169,7 @@
             </div>
         </footer>
 
-
+        
         <script src="randomuser.js"></script>
     </body>
 </html>
